chore: last round up style fixes. Changes to panel allocation in data explorer, spacing between buttons on list pages adjusted. home page button size smaller

--- a/src/flows/components/AddButtons.scss
+++ b/src/flows/components/AddButtons.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: stretch;
   flex: 1 0 160px;
-  width: 160px;
+  width: ($cf-space-3xl + $cf-space-s) * 2;
   background-color: $cf-grey-5;
   border-radius: $cf-radius;
   padding: 0 $cf-space-s;
